--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,8 @@ set(CMAKE_CXX_STANDARD 11)
 
 add_executable(RLE main.cpp
         src/encoder.h
-        src/encoder.cpp)
+        src/encoder.cpp
+        src/Filesystem.cpp
+        src/Filesystem.h
+        src/FileSystem.cpp
+        src/FileSystem.h)
